Metodos para renderer y escena

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
     <title>Three Curso</title>
 </head>
 <body>
-    <div id="game-container"></div>
+    <div id="container">
+        <canvas id="game-container"></canvas>
+    </div>
+
 </body>
 </html>
